--- a/index.html
+++ b/index.html
@@ -20,19 +20,21 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+
+    <!-- Fav icon -->
+    <link rel="icon" href="./assets/img/favIcon.pokemon.png" type="image/fav-icon" />
 </head>
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
-
+        <img class="header-title"  src="./assets/img/header.webp" width="100%" height="250px" alt="header title">
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
-                Load More
+                Load More pokémons
             </button>
         </div>
     </section>
