--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--Meu CSS-->
     <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pokedex.css" />
+    <link rel="stylesheet" href="assets/css/pokedetail.css" />
 
     <!-- Normalize CSS -->
     <link
