--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         /></a>
         <h1 id="title">Pokedéx!</h1>
       </div>
+      
+      <!--Detalhe dos pokemons inseridos aqui-->
 
       <ol id="pokemonlist" class="pokelist">
         <!--Pokemons inseridos pela API aqui-->
