Filtragem através do nome

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <section class="content">
         <h1>Pokedex</h1>
 
+        <input type="text" placeholder="Informe o nome ou o código do Pokemon..." oninput="buscarPorNome(event.currentTarget)">
+
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
