--- a/index.html
+++ b/index.html
@@ -7,45 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
 
-    <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
-    <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/types.css">
+    <script defer src="/assets/js/pokeApi.js"></script>
+    <script defer src="/assets/js//pokedexList.js"></script>
+    <script defer src="/assets/js/main.js"></script>
+
 </head>
 
 <body>
-    <section class="content">
-        <h1>Pokedex</h1>
+    <header>
+        <h1>Pokedex Filter</h1>
 
-        <ol class="pokemons">
-            <li class="pokemon">
-                <span class="number">#001</span>
-                <span class="name">Bulbasaur</span>
+        <div class="options">
+            <label for="ability">Habilidade
+                <input type="radio" class="filters" name="filter" id="ability" value="Habilidade">
+            </label>
+            <label for="type">Tipo
+                <input type="radio" class="filters" name="filter" id="type" value="Tipo">
+            </label>
+            <label for="poke">Individual
+                <input type="radio" class="filters" id="poke" name="filter" value="Pokemon">
+            </label>
+        </div>
 
-                <div class="detail">
-                    <ol class="types">
-                        <li class="type">grass</li>
-                        <li class="type">poison</li>
-                    </ol>
+        <form action="#" onsubmit="createList()" >
+            <input type="text" id="src-poke" placeholder="Digite o valor desejado...">
+            <button id="btn-search">Pesquisar</button>
+        </form>
+    </header>
 
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-                        alt="Bulbasaur">
-                </div>
-            </li>
-        </ol>
-    </section>
+    <main>
+            <div class="page">
+                <input id="btn-prev" type="button" value="Anterior" disabled>
+                <input id="btn-reset" type="button" value="Reset">
+                <input id="btn-next" type="button" value="Próximo" disabled>
+            </div>
+        <div id="load"></div>
+    </main>
 
-    <!-- Nosso JS -->
-    <script src="/assets/js/main.js"></script>
+
 </body>
 
 </html>
