--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
-
+    
+    <!--ToolTip CSS-->
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/shift-away-extreme.css" />
+    
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -50,6 +53,9 @@
         </div>
     </div>
 
+    <!-- Tooltip scripts -->
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
     <!-- Nosso JS -->
     <script src="./assets/js/manipulaçãoModal.js"></script>
     <script src="./assets/js/pokemon-model.js"></script>
