--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!--ToolTip CSS-->
     <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/shift-away-extreme.css" />
-    
+
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -36,7 +36,7 @@
         </ol>
 
         <div class="pagination">
-            <button id="loadMore" type="button">
+            <button id="loadMore" type="button" >
                 Load More
             </button>
         </div>
@@ -53,14 +53,16 @@
         </div>
     </div>
 
-    <!-- Tooltip scripts -->
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="https://unpkg.com/tippy.js@6"></script>
+  
     <!-- Nosso JS -->
     <script src="./assets/js/manipulaçãoModal.js"></script>
     <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
+    <!-- Tooltip scripts -->
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <script src="./assets/js/tooltipConfigs.js"></script>
 </body>
 
 </html>
