--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/pokedex.css">
+    <link rel="stylesheet" href="assets/css/modal.css">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
+            <!-- ..... Pokemons aqui ..... -->
         </ol>
 
         <div class="pagination">
@@ -37,10 +38,21 @@
         </div>
     </section>
 
+    <div id="detalhesModal" class="modal">
+        <div class='centralizarModal'>
+            <div id="conteudoModal" class="conteudoModal">
+                <div id="pokemonDetalhes" class="pokemonDetalhesModal">
+                    <!-- Detalhes do pokemons -->
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/pokemon-model.js"></script>
+    <script src="assets/js/poke-api.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/modal.js"></script>
 </body>
 
 </html>
