--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
+    <!-- Challenge JS About -->
+    <script src="/assets/js/about/about-pokemon-model.js"></script>
+    <script src="/assets/js/about/about-poke-api.js"></script>
+    <script src="/assets/js/about/about.js"></script>
 </body>
 
 </html>
