feat: aumento da fonte do botão load more, inclusão do pointer na li da lista de pokemons assim fica mais intuitivo a pessoa saber que é clicavel

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </section>
 
     <div id="detalhesModal" class="modal">
-        <div class='centralizarModal'>
+        <div class='centralizar'>
             <div id="conteudoModal" class="conteudoModal">
-                <div id="pokemonDetalhes" class="pokemonDetalhesModal">
+                <div id="pokemonDetalhes" class="pokemonsModal">
                     <!-- Detalhes do pokemons -->
                 </div>
             </div>
