feat: add função de aparecer pokemon ao clicar e button de delimitar, style para o pokemon ao clicar

--- a/index.html
+++ b/index.html
@@ -30,16 +30,32 @@
             <!-- ..... Pokemons here ..... -->
         </ol>
 
+        <!-- teste -->
+        <div class="pokemon-details">
+            <div class="detail-info">
+                <h2 class="detail-name"></h2>
+                <div class="detail-types">
+                    <ul class="detail-type-list"></ul>
+                </div>
+                <div class="detail-image">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+
         <div class="pagination">
             <button id="loadMoreButton" type="button">
                 Load More
+            </button>
+            <button id="showLessButton" type="button">
+                Show Less
             </button>
         </div>
     </section>
 
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
+    <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
 
