feat: button de close, update atributos na imagem

--- a/index.html
+++ b/index.html
@@ -33,12 +33,28 @@
         <!-- teste -->
         <div class="pokemon-details">
             <div class="detail-info">
-                <h2 class="detail-name"></h2>
-                <div class="detail-types">
-                    <ul class="detail-type-list"></ul>
+                <div class="detail-header">
+                    <h2 class="detail-name"></h2>
+                    <button id="closeDetailButton" type="button">Close</button>
                 </div>
-                <div class="detail-image">
-                    <img src="" alt="">
+                <div class="detail-content">
+                    <div class="detail-image">
+                        <img src="" alt="">
+                    </div>
+                    <div class="detail-description"></div>
+                    <div class="detail-attributes">
+                        <h3>Attributes:</h3>
+                        <ul class="detail-attributes-list"></ul>
+                    </div>
+                    <div class="detail-abilities">
+                        <h3>Abilities:</h3>
+                        <ul class="detail-abilities-list"></ul>
+                    </div>
+                    <div class="detail-types">
+                        <h3>Types:</h3>
+                        <ul class="detail-types-list"></ul>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
