added menu detail behaviour for poke details

--- a/about.html
+++ b/about.html
@@ -10,78 +10,13 @@
 </head>
 <body>
     <header> 
-        <div> &larr; </div> 
+        <div><a href="javascript:history.back()"> &larr; </a></div> 
         <div> &hearts;</div>
     </header>
 
-    <section id="about-values">
-        <div id="title">
-            <h1> Teste </h1>
-            <h3> #003 </h3>
-        </div>
-        <div>
-            <span> Teste 1</span> <span> Teste 2</span>
-        </div>
-        <div class="poke-img-container">
-            <img alt="imagem do pokemon" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg">
-        </div>
-    </section>
+    <section id="about-values" class="about-values"></section>
 
-    <section id="poke-data-details">
-        <table>
-            <thead>
-                <tr class="poke-about-headline">
-                    <th style="border-bottom: 2px solid black;">About</th>
-                    <th>Base Stats</th>
-                    <th>Evolution</th>
-                    <th>Moves</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Species</td>
-                    <td colspan="3">teste</td>
-                </tr>
-                <tr>
-                    <td>Height</td>
-                    <td colspan="3">teste</td>
-                </tr>
-                <tr>
-                    <td>Weight</td>
-                    <td colspan="3">teste</td>
-                </tr>
-                <tr>
-                    <td>Abilities</td>
-                    <td colspan="3">teste</td>
-                </tr>
-            </tbody>
-        </table>
-        <br>
-        <table>
-            <thead>
-                <tr>
-                    <th colspan="4">Breeding</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Gender</td>
-                    <td colspan="3">teste</td>
-                </tr>
-                <tr>
-                    <td>Egg Groups</td>
-                    <td colspan="3">teste</td>
-                </tr>
-                <tr>
-                    <td>Egg Cycle</td>
-                    <td colspan="3">teste</td>
-                </tr>
-                <tr>                    
-                    <td colspan="4" style="height: 2em;"></td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
+    <section id="poke-data-details" class="poke-data-details"></section>
 
     <script src="/assets/js/about/about-fill-values.js"></script>
 </body>
