--- a/pokemon-about.html
+++ b/pokemon-about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
+    <title>Pokemon About</title>
 
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,30 +14,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
-    <!-- global.css e pokedex.css import -->
+    <!-- global.css e pokemon-about.css import -->
     <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/pokemon-about.css">
+    <link rel="stylesheet" href="/assets/css/styleguide.css">
 </head>
 <body>
-    <section class="content">
-        <h1 class="title">Pokedex</h1>
+    
+    <div id="pokemonAbout" class="about">
+        <!-- Info do pokemon adicionada dinamicamente aqui -->
+    </div>
 
-        <ol id="pokemonList" class="pokemons">
-            <!-- Pokemons dynamically added here!! -->
-        </ol>
-
-        <div class="pagination">        
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
-        </div>
-
-    </section>
-
-    <!-- main.js import -->
-    <script src="/assets/js/local-poke-api.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
-
+    <script src="/assets/js/pokemon-about.js"></script>
 </body>
 </html>
