--- a/index.html
+++ b/index.html
@@ -1,46 +1,137 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
-
     <!-- Normalize CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- Font Roboto -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font-Family Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
-
-    <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/poke-colors.css">
+    <link rel="stylesheet" href="./assets/css/pokedex.css">
+    <link rel="stylesheet" href="./assets/css/details-modal.css">
+    <title>Document</title>
 </head>
-
 <body>
-    <section class="content">
-        <h1>Pokedex</h1>
+    <section id= "detailModal" class="modal grass">
+        <header class="header">
+            <div class="menu">
+                <button id="close" class="back grass">←</button>
+                <button class="favorite grass">♡</button>
+            </div>
+
+            <div class="info">
+                <div class="info-name">
+                    <h1 class="name">Bulbasaur</h1>
+                    <div class="info-type">
+                        <p class="type grass">Grass</p>
+                        <p class="type grass">Poison</p>
+                    </div>
+                </div>
+
+                <p class="id">#001</p>
+            </div>
+        </header>
+
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="">
+
+        <section class="content">
+            <ul class="sections">
+                <li id="first-option">About</li>
+                <li>Base Stats</li>
+                <li>Evolution</li>
+                <li>Moves</li>
+            </ul>
+
+            <ul class="stats">
+                <li>
+                    <div class="stats-info">
+                        <p>Species</p>
+                        <span>Seed</span>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="stats-info">
+                        <p>Height</p>
+                        <span>2'3.6" (0.70cm)</span>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="stats-info">
+                        <p>Weight</p>
+                        <span>15.2 lbs (6.9 kg)</span>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="stats-info">
+                        <p>Abilities</p>
+                        <span>Overgrow, Cholorophyl</span>                                
+                    </div>
+                </li>
+            </ul>
+
+            <h4>Breeding</h4>
+
+            <ul class="stats">
+                <li>
+                    <div class="stats-info">
+                        <p>Gender</p>
+                        <span>Seed</span>
+                    </div>                            
+                </li>
+
+                <li>
+                    <div class="stats-info">     
+                        <p>Egg Groups</p>
+                        <span>Monster</span>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="stats-info">
+                        <p>Egg Cycle</p>
+                        <span>grass</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </section>
+
+    <section id="contentPokemon"class="content">
+        <h1>Pokedex - por datdudu</h1>
 
         <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
+            
         </ol>
-
+        
         <div class="pagination">
             <button id="loadMoreButton" type="button">
                 Load More
-            </button>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Pok%C3%A9_Ball_icon.svg/512px-Pok%C3%A9_Ball_icon.svg.png" alt="">
+            </button>     
         </div>
+
+        <footer class="links-footer">
+            <p>Me encontre em:</p>
+
+            <a href="https://github.com/datdudu">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/640px-Octicons-mark-github.svg.png" alt="">
+            </a>
+
+            <a href="https://www.linkedin.com/in/c-eduardocarvalho/">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/640px-LinkedIn_logo_initials.png" alt="">
+            </a>
+        </footer>
     </section>
-
-    <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/pokemon-model.js"></script>
+    <script src="./assets/js/poke-api.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
-
 </html>
