feat: poke-info.js

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
+      !!!!      <!-- ..... Pokemons here ..... -->
         </ol>
 
         <div class="pagination">
