--- a/poke-info.html
+++ b/poke-info.html
@@ -24,16 +24,13 @@
     />
 
     <!-- Nosso CSS -->
+    <link rel="stylesheet" href="/assets/css/poke-info.css" />
+    <!-- <link rel="stylesheet" href="/assets/css/global.css" /> -->
 
     <!-- <link rel="stylesheet" href="/assets/css/poke-info.css" /> -->
   </head>
 
   <body>
-
-    <div class="buttons">
-      <button class="back-btn">back</button>
-      <button>favorite</button>
-
     <section class="content">
       <!--  -->
     </section>
