Inicia estilização da pag pokeDetails

--- a/pokemonDetails.html
+++ b/pokemonDetails.html
@@ -19,26 +19,14 @@
 
   <!--CSS -->
   <link rel="stylesheet" href="/assets/css/global.css">
-  <link rel="stylesheet" href="/assets/css/pokedex.css">
+  <link rel="stylesheet" href="/assets/css/pokeDetails.css">
 </head>
 
 <body>
   <main class="content">
-    <h1>Pokedetalhes</h1>
+    <h1>Poke detalhes</h1>
 
     <section id="card-pokemon">
-      <!-- <div class="pokemons">
-        <img src="${pokemon.photo}" alt="${pokemon.name}">
-        <span class="number">#${pokemon.number}</span>
-        <span class="name">${pokemon.name}</span>
-
-        <div class="detail">
-          <ol class="types">
-            ${pokemon.types.map((type) => `<li class="type ${type}">${type}</li>`).join('')}
-          </ol>
-
-        </div>
-      </div> -->
     </section>
 
     <div class="pagination">
