Atualizações nos estilos e scripts

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="assets/css/modal.css" />
+    <link rel="stylesheet" href="assets/css/details.css" />
 </head>
 
 <body>
@@ -36,11 +38,18 @@
             </button>
         </div>
     </section>
+   
+    <!-- pop out -->
+    <center>
+        <div class="pop-out-loading fade-out-loading" id="loading"></div>
+        <div class="pop-out-loading fade-out-loading" id="text-loading"></div>
+    </center>
 
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/modal.js"></script>
+    <script src="assets/js/pokemon-model.js"></script>
+    <script src="assets/js/poke-api.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
