--- a/index.html
+++ b/index.html
@@ -18,29 +18,52 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/pokedex.css">
 </head>
 
 <body>
+
+    
     <section class="content">
-        <h1>Pokedex</h1>
+    <h1>Pokedex</h1>
 
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
-        </ol>
+    <div id="pokemonDescription" class="pokemon-description">
+        Descrição do Pokémon
+    </div>
 
-        <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
-        </div>
-    </section>
+    <ol id="pokemonList" class="pokemons">
+        <!-- ..... Pokemons here ..... -->
+        
+    </ol>
+
+    <div class="pagination">
+        <button id="loadMoreButton" type="button">
+            Load More
+        </button>
+        <ul id="pokemonList">
+    <!-- Pokémon items will be added here -->
+</ul>
+
+
+    </div>
+</section>
 
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/pokemon-model.js"></script>
+    <script src="./assets/js/poke-api.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <section class="content">
+        <ol id="pokemonList" class="pokemons">
+            <!-- ..... Pokemons here ..... -->
+            <!-- Example Pokémon item -->
+            <li class="pokemon">
+                <div class="pokemon-content">
+                    <!-- Pokémon content here -->
+                </div>
+            </li>
+            <!-- Repeat for other Pokémon items -->
+        </ol>
 </body>
 
 </html>
