feat: add pagina de detalhes do pokemon + mudanca na cor do texto para melhoria de legibilidade

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <section class="content">
         <h1>Pokedex</h1>
 
+        <div id="currentPokemonInfo">
+            <!-- ..... Load pokemon info here ..... -->
+        </div>
+
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
