"multiplas alteraçoes e adição de barra de pesquisa"

--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
 
   <body>
     <section class="content">
-      <h1 class="titulo">Pokedex</h1>
+      <div class="tituloBarra">
+        <h1 class="titulo">Pokedex</h1>
+        <div class="search-box">
+          <input
+            type="text"
+            class="search-txt"
+            placeholder="Qual o seu pokemon?"
+          />
+          <a href="#" class="search-btn">
+            <img src="./assets/find.png" alt="lupa" height="20" width="20" />
+          </a>
+        </div>
+      </div>
 
       <ol id="pokemonList" class="pokemons">
         <!-- ..... Pokemons here ..... -->
