--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
 
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -20,11 +19,15 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+
+    <!--Title image-->
+   <link rel="shortcut icon" href="./assets/images/favicon-16x16.png" type="image/x-icon">
+   <title>Pokedex</title>
 </head>
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
+        <div class="logoImage"><img src="./assets/images/logo.svg" alt="logo pokedex"></div>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
