add função para selecionar pokemon

--- a/detail.html
+++ b/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,11 +22,13 @@
 <body>
    
    <section class="detail">
-    <ol id="pokemonList" class="pokemons">
-    
+    <ol id="pokemonDetailList" class="pokemons">
+        <li id="pokemon"></li>
     </ol>
+   <a href="index.html"><button type="button">Voltar</button></a> 
    </section>
-   
-    <script src="detail.html"></script>
+   <script src="assets/js/pokemon-model.js"></script>
+   <script src="assets/js/poke-api.js"></script>
+    <script src="assets/js/detail.js"></script>
 </body>
 </html>
