--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <section class="content">
         <h1>Pokedex</h1>
 
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
-        </ol>
+        <ol id="pokemonList" class="pokemons"></ol>
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
