Aprimoramentos na interface da Pokedex

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 Load More
             </button>
         </div>
+        
+        <button id="reloadButton">Reload</button>
+
     </section>
 
     <!-- Nosso JS -->
