Pokedex com JavaScript

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
+        <img class="logo" src="https://user-images.githubusercontent.com/29473781/180619084-a56960ab-7efa-4e34-9d33-4e3e581d62ff.png" alt="POKEDEX">
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
