--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
+   
 
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -24,7 +24,7 @@
 <body>
     
     <section class="content">
-        <h1>Pokedex</h1>
+        <h1 class="jumping-title">Pokedex</h1> 
 
         <ol id="pokemonList" class="pokemons">
 
