hotfix/ css and organization

--- a/notFound.html
+++ b/notFound.html
@@ -19,7 +19,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+    crossorigin="anonymous"
+  />
     <!-- Font Roboto -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -50,11 +55,16 @@
             <h1>Pokemon Not Found</h1>
             <img src="../assets/images/pokemon.png"/>
             <div class="goBackButton">
-            <button id="goBackBtn"> Go back</button>
+            <button type="button" class="btn btn-secondary mt-3" id="goBackBtn"> Go back</button>
             </div>
           </section>`
       </section>
   <!--  JS -->
+  <script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+  crossorigin="anonymous"
+></script>
     <script src="assets/js/notFound.js"></script>
 </body>
 </html>
