--- a/index.html
+++ b/index.html
@@ -60,11 +60,26 @@
     <section id="pokemonContent" class="content">
       <ol id="pokemonList" class="pokemons"></ol>
       <div id= paginationButton class="pagination">
-        <button id="loadMore">Load more</button>
+        <button  class ="btn btn-secondary " id ="loadMore">Load more</button>
       </div>
-      
     </section>
-
+ <!-- Modal -->
+<div   class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Pokemon Details</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div id="pokemonModal" class="modal-body">
+        <p></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
     <!--  JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
