feat: finish js

--- a/pages/card.html
+++ b/pages/card.html
@@ -27,29 +27,7 @@
     <link rel="stylesheet" href="../assets/css/pokecard.css" />
   </head>
   <body>
-    <section class="content">
-      <!-- <header>
-      <p class="back_home">Fechar</p>
-      <p>Número</p>
-    </header>
-    <section> -->
-      <!-- <img src="" alt="" />
-      <h3>Nome</h3>
-      <div>
-        <p>Tipo 01</p>
-        <p>Tipo 02</p>
-      </div>
-    </section>
-    <section>
-      <h5>Habilidades:</h5>
-      <ul>
-        <li>Habilidade 01</li>
-        <li>Habilidade 02</li>
-        <li>Habilidade 03</li>
-      </ul>
-      <p>Peso</p>
-      <p>Altura</p> -->
-    </section>
+    <section id="card"></section>
     <script src="../assets/js/pokemon-model.js"></script>
     <script src="../assets/js/poke-api.js"></script>
     <script src="../assets/js/pokemon-info.js"></script>
