--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto:ital,wght@0,100;0,500;0,700;1,300&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="/Pokedex/assets/css/global.css">
-    <link rel="stylesheet" href="/Pokedex/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/pokedex.css">
 
 </head>
 <body>
