add paginas detalhes sobre pokemons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/assets/images/faviconPokebola" type="image/x-icon">
     <title>Pokedex</title>
 
     <!-- Normalize CSS -->
@@ -41,6 +42,11 @@
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
+
+     <!-- About JS -->
+     <script src="/assets/js/about/about-pokemon-model.js"></script>
+     <script src="/assets/js/about/about-poke-api.js"></script>
+     <script src="/assets/js/about/about.js"></script>
 </body>
 
 </html>
