criado detalhes de pokemon

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/detail.css"
 </head>
 
 <body>
-    <section class="content">
+    <section id="content" class="content">
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
@@ -38,9 +39,9 @@
     </section>
 
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/pokemon-model.js" defer></script>
+    <script src="/assets/js/poke-api.js" defer></script>
+    <script src="/assets/js/main.js" defer></script>
 </body>
 
 </html>
