criacao de arquivo js

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </section>
 
     <!-- Nosso JS -->
+    <script src="/assets/js/detail-pokemon.js"></script>
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
