--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
         </div>
     </section>
 
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div class="modal-body">
+                <!-- Aqui o conteúdo da API será inserido -->
+            </div>
+        </div> 
+    </div>
+
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
