Incluindo dados dos pokemons

--- a/pokemon-about.html
+++ b/pokemon-about.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <section class="details">
+    <section id="pokemonDetailsLi" class="informationsPokemom">
         <a href="index.html">⇐</a>
         <div class="name">Bulbasaur</div>
         <div class="number">#001</div>
@@ -34,8 +34,8 @@
                 </ol>
             </div>
 
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-                        alt="Bulbasaur">
+            <div class="image"><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                        alt="Bulbasaur"></div>
 
             <div class="information">
                 <ol>
@@ -45,8 +45,9 @@
                         <ul>Height</ul>
                         <ul>Weight</ul>
                         <ul>Abilities</ul>
+                    </li>        
                             
-                            <li class="breeding"><strong>Breeding</strong></li>
+                    <li class="breeding"><strong>Breeding</strong>
                             <ul>Gender</ul>
                             <ul>Egg Groups</ul>
                             <ul>Egg Cycle</ul>
@@ -62,7 +63,7 @@
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/pokemon-about.js"></script>
 </body>
 
 </html>
