Implementando os dados inseridos

--- a/pokemon-about.html
+++ b/pokemon-about.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <section id="pokemonDetailsLi" class="informationsPokemom">
+    <section id="pokemonDetailsLi" class="informationsPokemon">
         <a href="index.html">⇐</a>
         <div class="name">Bulbasaur</div>
         <div class="number">#001</div>
@@ -41,16 +41,16 @@
                 <ol>
                     <li class="about"><strong>About</strong>
                         <hr>
-                        <ul>Species</ul>
-                        <ul>Height</ul>
-                        <ul>Weight</ul>
-                        <ul>Abilities</ul>
+                        <ul><strong>Species</strong> Seed</ul>
+                        <ul><strong>Height</strong> 2'3,6* (0,70cm)</ul>
+                        <ul><strong>Weight</strong> 12.2 lbs (6,9 kg)</ul>
+                        <ul><strong>Abilities</strong> Oveegrow, Chlorophyl</ul>
                     </li>        
                             
                     <li class="breeding"><strong>Breeding</strong>
-                            <ul>Gender</ul>
-                            <ul>Egg Groups</ul>
-                            <ul>Egg Cycle</ul>
+                            <ul><strong>Gender</strong> M: 87,5% | F: 12,5%</ul>
+                            <ul><strong>Egg Groups</strong> Monster</ul>
+                            <ul><strong>Egg Cycle</strong> Grass</ul>
                     </li>
                     
                 </ol>
