update com os detalhes de cada pokemon e etc

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/pokeModal.css">
+
 </head>
 
 <body>
@@ -36,11 +38,15 @@
             </button>
         </div>
     </section>
+    <div id="pokeModal"> <!-- ..... Pokemons Details here ..... --></div>
 
+
+</div>
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/pokeModal.js"></script>
 </body>
 
 </html>
