Adicionando descrição para o Pokemon Bulbasaur

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
                 Load More
             </button>
         </div>
+        <div id="bulbasaurDescription" style="display: none;">
+            <h2>Bulbasaur</h2>
+            <p>Bulbasaur é um Pokémon do tipo Grama/Venenoso.</p>
+            <p>Ele é o número #01 na Pokedex.</p>
+            <p>Bulbasaur é conhecido por ter um bulbo nas costas que eventualmente se torna uma planta grande.</p>
+        </div>
+        <button id="showDescriptionButton" type="button">Mostrar Descrição Bulbasaur</button>
+        
     </section>
 
     <!-- Nosso JS -->
