(feat) add: adicionando detalhes de pokemon

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <body>
     <section class="content">
         <h1>Pokedex</h1>
+        <div id="description">
+        </div>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
@@ -36,7 +38,6 @@
             </button>
         </div>
     </section>
-
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
