feat: add details dos pokemons e corrigindo identaçao do código e trocando todos os valores que estavam em pixels para rem

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <body>
     <section class="content">
         <h1>Pokedex</h1>
-
+        <div id="description">
+        </div>
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
