feat: implements pokemon details view

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
+        <div id="pokemon-detail"></div>
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
